# qt6-semi-transparent

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: main.cpp
src/resources/qml/: main.qml
